--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
       sdk: flutter
 
    cupertino_icons: ^0.1.2
+   material_design_icons_flutter: ^5.0.6595
+   photo_manager: ^0.5.0
 
 dev_dependencies:
    flutter_test:
