--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
 
    cupertino_icons: ^0.1.2
    material_design_icons_flutter: ^5.0.6595
-   photo_manager: ^0.5.0
+   photo_manager: ^0.6.0
+   cached_network_image: ^3.2.0
+   flutter_spinkit: ^5.1.0
 
 dev_dependencies:
    flutter_test:
