--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
    photo_manager: ^0.6.0
    cached_network_image: ^3.2.0
    flutter_spinkit: ^5.1.0
+   intl: ^0.17.0
+   like_button: ^2.0.4
+   numeral: ^2.0.1
 
 dev_dependencies:
    flutter_test:
