--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
    intl: ^0.17.0
    like_button: ^2.0.4
    numeral: ^2.0.1
+   image_picker: ^0.7.5+4
+   shared_preferences: ^2.0.15
 
 dev_dependencies:
    flutter_test:
